# vanilla-updater

./: .gitignore  README.md  meson.build
data/: meson.build  vanilla-updater-autostart.desktop.in  vanilla-updater.appdata.xml.in  vanilla-updater.desktop.in  vanilla-updater.gschema.xml
data/icons/: meson.build
debian/: changelog  control  copyright  files
po/: POTFILES  meson.build
src/: main.py  meson.build  vanilla-updater-cli.in  vanilla-updater.gresource.xml  vanilla-updater.in  window.py  window.ui
src/core/: distro.py  meson.build  prepare.py  processor.py  updates_repository.py
src/utils/: meson.build  run_async.py
